# bevy_diagnostic_visualizer

./: CREDITS.md  Cargo.toml  README.md
examples/: many_foxes.rs  minimal.rs
src/: egui.rs  lib.rs
